# Lexer

./: Cargo.toml  codigo_fuente.txt
src/: main.rs  token.rs
src/estructuras/: cola.rs  gestor.rs  hash_map.rs  mod.rs
src/input/: mod.rs  scanner.rs
src/lexer/: automata.rs  mod.rs
src/reportes/: gestor_errores.rs  mod.rs
